k8s/app/flask-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: flask-namespace
  labels:
    app: flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-deployment
  template:
    metadata:
      labels:
        app: flask-app-deployment
    spec:
      containers:
        - name: flask-app-container
          image: shoeb5401/flask-mysql:v1
          ports:
            - containerPort: 5000

          imagePullPolicy: Always

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
