k8s/app/flask-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask-namespace
spec:
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
